Updated the database rules. Fixed a bug with a loader flickering.

--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -4,7 +4,7 @@
     left: 0;
     bottom: 0;
     right: 0;
-    background:rgba(255,255,255,0.9);
+    background:transparent;
     z-index: 999;
     display: flex;
     justify-content: center;
