--- a/src/routes/Main/routes/Menu/containers/styles/MainMenu.css
+++ b/src/routes/Main/routes/Menu/containers/styles/MainMenu.css
@@ -54,6 +54,16 @@
     padding: 0 10px 0 10px;
 }
 
+.cardHeaderTitle {
+    display: flex;
+    flex: 1;
+}
+
+.cardHeaderTitleText {
+    align-self: center;
+    margin-left: 10px;
+}
+
 .cardHeaderExpanded {
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
 }
